fix visual bug in resume section concerning the arrows of the right-aligned containers when on retina screens

--- a/src/css/_modules.scss
+++ b/src/css/_modules.scss
@@ -515,7 +515,7 @@
 
 		&--content {
 			position: relative;
-			width: 41%;
+			width: 39%;
 			margin-right: 17px;
 			padding: 20px;
 			border: 1px solid $m-light-grey;
